# cw-ave

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  justfile
contracts/cw-ave/: Cargo.toml
contracts/cw-ave-factory/: Cargo.toml
contracts/cw-ave-factory/examples/: schema.rs
contracts/cw-ave-factory/schema/: cw-ave-factory.json
contracts/cw-ave-factory/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/cw-ave/schema/: cw-ave.json
contracts/cw-ave/src/: README.md  contract.rs  error.rs  msg.rs  state.rs  test.rs
contracts/cw420/: Cargo.toml
deployments/: state.json
scripts/: Cargo.toml  schema-and-codegen.sh
scripts/src/: lib.rs
scripts/src/interfaces/: cw_420.rs  cw_ave.rs  cw_ave_factory.rs  mod.rs  suite.rs
scripts/src/tests/: cw_ave.rs  mod.rs
ts/: codegen.ts  package.json
ts/src/: CwAve.client.ts  CwAve.message-composer.ts  CwAve.react-query.ts  CwAve.types.ts  CwAveFactory.client.ts  CwAveFactory.message-composer.ts  CwAveFactory.react-query.ts  CwAveFactory.types.ts  index.ts
