[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cosmrs = "0.15.0"
cosmwasm-std= { workspace = true }
cw-orch = { workspace = true, features = ["daemon"] }
dotenv = "0.15.0"
env_logger = { version = "0.11.3", default-features = false }
cw-ave = {  path = "../contracts/cw-ave" }
cw-ave-factory = {  path = "../contracts/cw-ave-factory" }
clap = "4.5.23"