[package]
name ="cw-ave-factory"
version = "0.1.0"
authors = ["A Hardnett"]
description = "A CosmWasm factory contract for instantiating a av event instance."
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_2"] }
cosmwasm-schema = { workspace = true }
cw-ave = { path = "../cw-ave", features = ["library"] }
cw-denom = { workspace = true }
cw-ownable = { workspace = true }
cw-orch = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw4 = { workspace = true }
cw420 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = {version = "2.4.0", features = ["cosmwasm_1_2"]}
cw20-base = { workspace = true, features = ["library"] } 
easy-addr = { workspace = true }