[package]
name = "cw-ave"
version  = { workspace = true }
authors  = { workspace = true }
edition  = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmos-sdk-proto = { workspace = true }
cw-storage-plus  = { workspace = true }
sha2  = { workspace = true }
cw2  = { workspace = true }
cw4  = { workspace = true }
cw20 = { workspace = true }
cw420 = { workspace = true }
cw20-base  = { workspace = true }
cw-orch = { workspace = true }
cw-denom  = { workspace = true }
schemars = { workspace = true }
serde = { workspace  = true , default-features = false, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
cw-multi-test = "2.4.0"
